Name:                Hell
Version:             0.1.1
Description:         A web application development framework for Haskell users
License:             WTFPL
Author:              Yang Jerng HWA
Maintainer:          yangjerng@gmail.com
Build-Type:          Simple
Cabal-Version:       >=1.16.0.3

Executable makeHell
  Default-Language: Haskell2010
  Main-Is:          makeHell.hs
  Hs-Source-Dirs:   ., Hell
  Other-Modules:    
      Hell.Types
    , Hell.Conf 
    , Hell.Lib 
    --, Hell.Splice
    , Hell.Assemble
  Build-Depends:    
      base == 4.5.1.0
    , MissingH == 1.2.0.0
    , directory == 1.1.0.2
    --, clientsession == 0.9
    , clientsession >= 0.9
    , http-types == 0.8.0
    , warp == 1.3.8
    , wai == 1.4.0
    , vault == 0.2.0.4
    , text == 0.11.2.3
    , containers == 0.4.2.1
    , bytestring == 0.9.2.1
    , bson == 0.2.2
    , binary == 0.5.1.0
    , resourcet == 0.4.7
    , conduit == 1.0.4.2
    , stringsearch == 0.3.6.4
    , transformers == 0.3.0.0
    , blaze-builder == 0.3.1.1
    , utf8-string == 0.3.7
    , wai-extra == 1.3.4
    , mongoDB == 1.3.2
